[add いいね、コメント機能]

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,10 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <div id="favorite_btn_<%= book.id %>">
+            <%= render 'favorites/favorite', book: book %>
+        </div>
+        <td><%= "コメント数#{book.book_comments.count}" %></td>
       </tr>
     <% end %>
   </tbody>
