--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,8 +21,41 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
+          <div id="favorite_btn_<%= @book.id %>">
+            <%= render 'favorites/favorite', book: @book %>
+          </div>
         </tr>
       </table>
+      
+      <table>
+      <p>コメント数：<%= @book.book_comments.count %></p>
+            <% @book.book_comments.each do |book_comment| %>
+            <tr>
+            <td>
+              <p><%= image_tag book_comment.user.get_profile_image, size:'50x50' %></p>
+              <p><%= book_comment.user.name %></p>
+              <p><%= book_comment.comment %></p>
+            </td>    
+            <td>
+							<% if book_comment.user_id == current_user.id %>
+								<%= link_to "Destroy", book_book_comment_path(@book, book_comment.id), method: :delete, class: "btn-sm btn-danger destroy_book_comment_#{@book.id}" %>
+							<% end %>
+						</td>
+						</tr>
+            <% end %>
+      </table>
+      
+      <div>
+        <%= form_with model:[@book,@book_comment] do |f| %>
+        <div class="form-group">
+          <%= f.text_area :comment, rows:'5',placeholder:"コメントをここに" %>
+        </div>
+        <div>
+          <%= f.submit "送信する" %>
+        </div>
+        <% end %>
+      <div>
+        
     </div>
   </div>
 </div>
